[tool.poetry]
name = "behave-db"
version = "0.0.1"
description = "BDD DB steps implementation for Behave"
authors = ["zmr <zmr_01@126.com>"]
license = "BSD"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
    "Programming Language :: Python",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3"
]
keywords = ["BDD", "Behavior-Driven-Development", "DB"]
repository = "https://github.com/halliday-M/behave-db"
readme = "README.md"



[tool.poetry.dependencies]
python = "^2.7 ||^3.7 || ^3.8"
behave = "^1.2.6"
jaydebeapi


[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
