[tool.poetry]
name = "behave-db"
version = "0.0.4"
description = "BDD DB steps implementation for Behave"
authors = ["zmr <zmr_01@126.com>"]
license = "BSD"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
    "Programming Language :: Python",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3"
]
keywords = ["BDD", "Behavior-Driven-Development", "DB"]
repository = "https://github.com/M-halliday/behave-db"
readme = "README.md"


[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true


[tool.poetry.dependencies]
python = "^2.7 ||^3.7"
behave = "^1.2.6"
JayDeBeApi = "^1.2.3"
Jinja2 = "^3.1.*"

[tool.poetry.dev-dependencies]
flake8 = "*"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
